output/patch_sandbox/128/tests/27.kubeteus_misconfigured_policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-product
  namespace: bookinfo
spec:
  selector: app == 'productpagee'
  egress:
  - action: Allow
    protocol: TCP
    source:
      endpointSelector: app == 'details'
    destination:
      ports:
      - 9081
  securityContext:
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
    runAsNonRoot: true
    capabilities:
      drop:
      - ALL
